Add basic structure of footer

--- a/src/index.html
+++ b/src/index.html
@@ -21,3 +21,11 @@
             </ul>
         </nav>
     </header>
+
+    <footer class="p-3 m-0 m-0 p-0">
+      <div class="footer-container container text-dark mx-auto w-100">
+        <p class="footer-text">
+          Created by Kwasi & Daphine as Capstone Project for Module 2
+        </p>
+      </div>
+    </footer>
