Add styling to card

--- a/src/index.html
+++ b/src/index.html
@@ -24,10 +24,12 @@
 
     <ul class="country-list"></ul>
 
-    <footer class="p-3 m-0 m-0 p-0">
+    <footer class="p-3 m-0 border">
       <div class="footer-container container text-dark mx-auto w-100">
         <p class="footer-text">
           Created by Kwasi & Daphine as Capstone Project for Module 2
         </p>
       </div>
     </footer>
+</body>
+</html>
