Display comment in popup for countries

--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,12 @@
           <h3 id="population"></h3>
            <h3>Sub Region: <span id="sub-region"></span></h3>
         </div>
+        <div class="content">
+              <div class="comment-list-container">
+                <h3>Comments</h3>
+              <ul class="comment-list"></ul>
+            </div>
+            </div>
   </div>
   </div>
 
