Create feature for adding comment in pop-up

--- a/src/index.html
+++ b/src/index.html
@@ -41,12 +41,21 @@
            <h3>Sub Region: <span id="sub-region"></span></h3>
         </div>
         <div class="content">
-              <div class="comment-list-container">
-                <h3>Comments</h3>
-              <ul class="comment-list"></ul>
-            </div>
-            </div>
-  </div>
+          <div class="comment-list-container">
+            <h3>Comments</h3>
+            <ul class="comment-list"></ul>
+          </div>
+        </div>
+          <div class="form-container" id="show-id">
+            <h3 class ='d-flex w-100 justify-content-center'>Add comment <small id="message"></small></h3>
+            <form>
+              <input type="text" name="name" id="name" placeholder="You name">
+              <textarea id="insights" name="insights" rows="4" cols="50" placeholder="Your insights"></textarea>
+              <button type="button" id='add-comment' >Comment</button>
+            </form>
+          </div>
+      </div>
+    </div>
   </div>
 
     <footer class="p-3 m-0 border">
