Add counter for countries

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
         <div class="logo text-white">Logo</div>
         <nav>
             <ul>
-                <li class="menu-item">Countries(6)</li>
+                <li class="menu-item">Countries (<span id="country-counter"></span>)</li>
                 <li class="menu-item">Population</li>
                 <li class="menu-item">States</li>
             </ul>
