--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         </div>
         <div class="content">
           <div class="comment-list-container">
-            <h3>Comments</h3>
+            <h3>Comments (<span class="commentsCounter"></span>)</h3>
             <ul class="comment-list"></ul>
           </div>
         </div>
