Add final styling to project

--- a/src/index.html
+++ b/src/index.html
@@ -1,77 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kanban Board Capstone Project</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
-    <link rel="stylesheet" href="./style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kanban Board Capstone Project</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto&display=swap">
+  <link rel="stylesheet" href="./style.css">
 </head>
-<body class="container">
-    <header>
-        <div class="logo text-white">Logo</div>
-        <nav>
-            <ul>
-                <li class="menu-item">Countries (<span id="country-counter"></span>)</li>
-                <li class="menu-item">Population</li>
-                <li class="menu-item">States</li>
-            </ul>
-        </nav>
-    </header>
 
-    <ul class="country-list"></ul>
-
-    <!-- modal -->
-    <div id="item-modal" class="modal-container">
-      <div class="card-container">
-        <div class="header-container">
-            <div class="modal-header">
-              <span class="close">&times;</span>
-            </div> 
-        </div>
-        <div class="modal-body">
-          <div class="image-container">
-            <img id="country-img" src="" alt="modal image">
-          </div>
-          <h3 id="country-title"></h3>
-          <h3 id="population"></h3>
-           <h3>Sub Region: <span id="sub-region"></span></h3>
-        </div>
-        <div class="content">
-          <div class="comment-list-container">
-            <h3>Comments (<span class="commentsCounter"></span>)</h3>
-            <ul class="comment-list"></ul>
-          </div>
-        </div>
-          <div class="form-container" id="show-id">
-            <h3 class ='d-flex w-100 justify-content-center'>Add comment <small id="message"></small></h3>
-            <form>
-              <input type="text" name="name" id="name" placeholder="You name">
-              <textarea id="insights" name="insights" rows="4" cols="50" placeholder="Your insights"></textarea>
-              <button type="button" id='add-comment' >Comment</button>
-            </form>
-          </div>
-      </div>
+<body>
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
+      <a class="navbar-brand d-flex align-items-center text-uppercase text-dark">
+        <svg fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
+        <p class="mb-0">Globe App</p>
+      </a>
+      <ul class="navbar-nav">
+        <li class="nav-item">Countries (<span id="country-counter"></span>)</li>
+        <li class="nav-item mx-md-4">Population</li>
+        <li class="nav-item">States</li>
+      </ul>
     </div>
+  </nav>
+
+  <div class="container my-4">
+    <div class="row gx-5 gy-5 country-list"></div>
   </div>
 
-    <footer class="p-3 m-0 border">
-      <div class="footer-container container text-dark mx-auto w-100">
-        <p class="footer-text">
-          Created by Kwasi & Daphine as Capstone Project for Module 2
-        </p>
-      </div>
-    </footer>
+  <footer class="p-3 m-0 border">
+    <div class="footer-container container text-dark mx-auto w-100">
+      <p class="footer-text">
+        Created by Kwasi & Daphine as Capstone Project for Module 2
+      </p>
+    </div>
+  </footer>
 
 
-  <script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-  crossorigin="anonymous"
-></script>
-<script src="./index.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+  <script src="./index.js"></script>
 </body>
+
 </html>
